# dtp-docker

./: .Dockerignore  .env  .env.template  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  compose.yaml  justfile  pyproject.toml
.pre-commit/: biome.jsonc  ruff.toml  yamlfmt.yaml
admin_services/api/: compose.include-dev.yaml  pyproject.toml
admin_services/api/src/dtp/admin_api/: __init__.py  models.py
dataingress/mosquitto/: compose.include.yaml
datastore/timescaledb/: compose.include.yaml  create_db.sh  create_dtp.sh
datastore/timescaledb/phppgadmin/: config.inc.php
env_templates/: README.md  compose.env.j2  pyproject.toml  timescaledb.env.j2
infra/api/: Dockerfile  compose.include.yaml  pyproject.toml
infra/api/src/dtp/api/: __init__.py
infra/auth/: .Dockerignore  Dockerfile  README.md  compose.include.yaml  pyproject.toml
infra/auth/src/dtp/auth/: __init__.py  db.py
infra/auth/src/dtp/auth/models/: users.py
infra/auth/src/dtp/models/: __init__.py
infra/backend/: README.md  pyproject.toml
infra/backend/src/dtp/: __init__.py
infra/backend/src/dtp/api/: __init__.py  db.py
infra/frontend/: Dockerfile  README.md  compose.include.yaml  index.html  login.html  package.json  vite.config.ts
infra/frontend/src/: App.tsx  LoginApp.tsx  MyAppShell.tsx  config.ts  util.tsx
infra/frontend/src/components/: AuthProvider.tsx  MyAppShell.tsx
infra/frontend/src/pages/: LoginApp.tsx  MainApp.tsx  MyAccountApp.tsx  UserAdminApp.tsx  index.html  login.html  login.tsx  main.tsx  me.html  my_account.tsx  user_admin.html  user_admin.tsx
infra/frontend/src/pages/user_admin/: AdminUpdateUserApp.tsx  admin_update_user.tsx  update_user.html
infra/traefik/: compose.include.yaml  dynamic.yml  traefik.yml
infra/whoami/: compose.include.yaml
py_common/: pyproject.toml
py_common/src/dtp/common/: __init__.py
scripts/: aliases.sh  gen_env.py  just_completions.sh
vm-setup/: .pureline.conf  apt_list  setup.sh  setup_docker.sh
