[project]
name = "dtp-common"
version = "0.1.0"
description = "Common module for DT platform Python packages"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" }
]
requires-python = ">=3.14"
dependencies = []

[tool.uv.build-backend]
module-name = "dtp.common"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
