[project]
name = "dtp-docker-api"
version = "0.1.0"
description = "Core API server for the Digital Twin Platform"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" }
]
requires-python = ">=3.14"
dependencies = [
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "psycopg>=3.2.13",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "timescaledb>=0.0.4",
]

[tool.uv.build-backend]
module-name = "dtp.api"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
