[project]
name = "dtp-docker-auth"
version = "0.1.0"
description = "Authentication module for the Digital Twin Platform"
readme = "README.md"
authors = [
    { name = "Yin-Chi Chan", email = "ycc39@cam.ac.uk" }
]
requires-python = ">=3.14"
dependencies = [
    "bcrypt>=5.0.0",
    "dotenv>=0.9.9",
    "fastapi[standard]>=0.122.0",
    "jose>=1.0.0",
    "jwt-pydantic>=0.0.7",
    "psycopg>=3.2.13",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "sqlmodel>=0.0.27",
    "timescaledb>=0.0.4",
]

[tool.uv.build-backend]
module-name = "dtp"

[project.scripts]
auth = "dtp.auth:main"

[build-system]
requires = ["uv_build>=0.9.12,<0.10.0"]
build-backend = "uv_build"
